<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about">About</string>
    <string name="about_label">About</string>
    <string name="about_this_app">About this app</string>
    <string name="about_uptodown">About Uptodown</string>
    <string name="accept_and_download">Accept and download</string>
    <string name="access_data">Access Data</string>
    <string name="account">com.uptodown.account</string>
    <string name="action_added_to_wishlist">%s added to wishlist</string>
    <string name="action_app_details_settings">App Info</string>
    <string name="action_cancel_download">Cancel download</string>
    <string name="action_delete_all">Delete all</string>
    <string name="action_name_file_explorer">File manager</string>
    <string name="action_pause">Pause</string>
    <string name="action_removed_from_wishlist">%s removed from wishlist</string>
    <string name="action_update">Update</string>
    <string name="add_recommended">Add to the recommended apps list</string>
    <string name="add_to">Add to…</string>
    <string name="ads_msg_gdpr">Use of your personal data to show personalised ads</string>
    <string name="ads_title_gdpr">Advertising</string>
    <string name="advanced_settings">Advanced settings</string>
    <string name="advertising">Advertising</string>
    <string name="age_verification_desc">This app may include content that is not appropriate for all ages. Please, enter your birth year to continue.</string>
    <string name="age_verification_failed">"This app's details are not available to you because you are under the minimum age requirement. You can manage your preferences under Settings."</string>
    <string name="age_verification_input_failed">Please choose a valid year.</string>
    <string name="age_verification_input_privacy_note">This information is stored on your device only and will not be shared.</string>
    <string name="age_verification_input_title">Birth year</string>
    <string name="age_verification_setting_confirmation_msg">Are you sure you want to reset your birth year? You will have to verify your age again.</string>
    <string name="age_verification_setting_desc">Show an age verification prompt before accessing apps with age-restricted content.</string>
    <string name="age_verification_title">Age-restricted content</string>
    <string name="agree_to_all">Accept all</string>
    <string name="all_partners_toolbar_title">Partners (All vendors)</string>
    <string name="already_following">User is already being followed</string>
    <string name="already_signed_up">Already have an account? SIGN IN</string>
    <string name="analytics_msg_gdpr">Google Analytics for Firebase provides free, unlimited reports on up to 500 different events. The SDK automatically captures certain key events and user properties for measurement.</string>
    <string name="analytics_title_gdpr">ANALYTICS</string>
    <string name="analyze">Scan</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="anonymous_feed_msg">Log in to see your custom feed</string>
    <string name="answer_always">Always</string>
    <string name="answer_daily">Daily</string>
    <string name="answer_never">Never</string>
    <string name="answer_next">Next</string>
    <string name="answer_weekly">Weekly</string>
    <string name="apks_to_install_label_dialog_splits">Apks to install:</string>
    <string name="app_catalog_details">See on Uptodown App Store</string>
    <string name="app_detail_add_wishlist_title">Add to wishlist</string>
    <string name="app_detail_enqueue_download">Download pending</string>
    <string name="app_detail_more_info_title">More info</string>
    <string name="app_detail_not_available">Download not available</string>
    <string name="app_detail_not_compatible">App not compatible</string>
    <string name="app_detail_not_found">Not found</string>
    <string name="app_detail_play_button">Play</string>
    <string name="app_detail_remove_wishlist_title">Remove from wishlist</string>
    <string name="app_detail_reviews_title">Rating</string>
    <string name="app_detail_whats_new">"What's new"</string>
    <string name="app_details_technical_data_title">Requirements</string>
    <string name="app_details_technical_data_version">(Last version)</string>
    <string name="app_info_basic">Basic information</string>
    <string name="app_info_certificate_signature">Certificate signature</string>
    <string name="app_info_developer">Developer</string>
    <string name="app_info_download_info">Download info</string>
    <string name="app_info_file_type">File type</string>
    <string name="app_info_languages">%1$s and %2$s more</string>
    <string name="app_info_security_and_privacy">Security and privacy</string>
    <string name="app_info_technical_details">Technical details</string>
    <string name="app_info_view_report">See security and antivirus report</string>
    <string name="app_info_why_is_published">Why is this app published on Uptodown?</string>
    <string name="app_instaled_details">App installed details</string>
    <string name="app_installed">Installed</string>
    <string name="app_installed_files_title">Files</string>
    <string name="app_installed_first_installed">First installation</string>
    <string name="app_installed_see_detail">See detail</string>
    <string name="app_installed_x_files_value">%s files</string>
    <string name="app_name">Uptodown App Store</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="apps">Apps</string>
    <string name="apps_count">%s apps</string>
    <string name="apps_count_1">1 app</string>
    <string name="apps_not_found">"Oops! We couldn't find any apps matching %s."</string>
    <string name="arquitecture_label_dialog_splits">Arquitecture:</string>
    <string name="asset_statements">"[{
 \"relation\": [\"delegate_permission/common.handle_all_urls\"],
 \"target\": {
 \"namespace\": \"web\",
 \"site\": \"http://www.uptodown.com\",
 }
}]"</string>
    <string name="auto">Auto</string>
    <string name="autoupdate_installed_version">Installed: %1$s</string>
    <string name="autoupdate_update_size">(%1$s)</string>
    <string name="autoupdate_update_version">Update: %1$s</string>
    <string name="avatar_activity_changed_success">Avatar has been changed successfully.</string>
    <string name="avatar_activity_title">Choose your profile picture</string>
    <string name="avatar_activity_toolbar_title">Change avatar</string>
    <string name="avatar_edit_title">Change my avatar</string>
    <string name="avatars">Avatars</string>
    <string name="back">Back</string>
    <string name="background_sync">Background sync</string>
    <string name="background_sync_description">May affect how quickly apps are updated</string>
    <string name="backup">Backup copy</string>
    <string name="backup_file_extension">Extension:</string>
    <string name="backup_file_name_format">Name format for the backup file:</string>
    <string name="backup_finished">Backup completed</string>
    <string name="backup_no_free_space">Not enough space.</string>
    <string name="best_alternatives">Best alternatives</string>
    <string name="best_comments">Best</string>
    <string name="billing_cycle">Billing cycle</string>
    <string name="billing_cycle_desc">Resets on day %s</string>
    <string name="billing_cycle_set_day">Set day</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="bottomsheet_action_collapse">Collapse the bottom sheet</string>
    <string name="bottomsheet_action_expand">Expand the bottom sheet</string>
    <string name="bottomsheet_action_expand_halfway">Expand halfway</string>
    <string name="bottomsheet_drag_handle_content_description">Drag handle</string>
    <string name="brakets_placeholder">(%s)</string>
    <string name="brand">Brand</string>
    <string name="browse_files">Browse files</string>
    <string name="btn_back_content_desc">Back</string>
    <string name="button_notification_dialog_permission">Go to app configuration</string>
    <string name="button_send_suggestion">Send</string>
    <string name="call_notification_answer_action">Answer</string>
    <string name="call_notification_answer_video_action">Video</string>
    <string name="call_notification_decline_action">Decline</string>
    <string name="call_notification_hang_up_action">Hang Up</string>
    <string name="call_notification_incoming_text">Incoming call</string>
    <string name="call_notification_ongoing_text">Ongoing call</string>
    <string name="close">Close</string>
    <string name="default_value_0">0</string>
    <string name="download_anyways">Download anyways</string>
    <string name="facebook">Facebook</string>
    <string name="instagram">Instagram</string>
    <string name="label_uptodown_protect">Uptodown protect</string>
    <string name="linked_in">Linked In</string>
    <string name="more_info_label_sha256">SHA256</string>
    <string name="option_button_install">Install</string>
    <string name="positive_file_found">This file may contain a virus or other malware</string>
    <string name="signature_label_virustotal_report">SIGNATURE:</string>
    <string name="tiktok">TikTok</string>
    <string name="virustotal_report_msg">of &lt;b>%1$s&lt;/b> antivirus say(s) may contain adware</string>
    <string name="virustotal_report_no_report_available">No available report.</string>
    <string name="virustotal_safety_report_title">Safety report</string>
    <string name="vt_report_certified_by_uptodown_com">Certified by Uptodown.com</string>
    <string name="vt_report_no_malware">No malware</string>
    <string name="vt_report_no_spyware">No spyware</string>
    <string name="vt_report_no_virus">No virus</string>
    <string name="vt_report_see_full_report">View full report in</string>
    <string name="vt_report_virustotal">VirusTotal</string>
    <string name="x">X</string>
    <string name="youtube">Youtube</string>
</resources>