<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="horizontal" android:paddingLeft="@dimen/margin_m" android:paddingRight="@dimen/margin_m" android:layout_width="wrap_content" android:layout_height="wrap_content" android:paddingHorizontal="@dimen/margin_m"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <ImageView android:id="@id/iv_youtube_preferences" android:background="@drawable/shape_bg_social_media" android:padding="@dimen/margin_s" android:layout_width="@dimen/icon_size_m" android:layout_height="@dimen/icon_size_m" android:maxWidth="@dimen/icon_size_m" android:contentDescription="@string/youtube" app:srcCompat="@drawable/vector_organization_youtube" />
    <ImageView android:id="@id/iv_tiktok_preferences" android:background="@drawable/shape_bg_social_media" android:padding="@dimen/margin_s" android:layout_width="@dimen/icon_size_m" android:layout_height="@dimen/icon_size_m" android:maxWidth="@dimen/icon_size_m" android:contentDescription="@string/tiktok" android:layout_marginStart="@dimen/margin_m" app:srcCompat="@drawable/vector_organization_tiktok" />
    <ImageView android:id="@id/iv_x_preferences" android:background="@drawable/shape_bg_social_media" android:padding="@dimen/margin_s" android:layout_width="@dimen/icon_size_m" android:layout_height="@dimen/icon_size_m" android:maxWidth="@dimen/icon_size_m" android:contentDescription="@string/x" android:layout_marginStart="@dimen/margin_m" app:srcCompat="@drawable/vector_organization_x" />
    <ImageView android:id="@id/iv_instagram_preferences" android:background="@drawable/shape_bg_social_media" android:padding="@dimen/margin_s" android:layout_width="@dimen/icon_size_m" android:layout_height="@dimen/icon_size_m" android:maxWidth="@dimen/icon_size_m" android:contentDescription="@string/instagram" android:layout_marginStart="@dimen/margin_m" app:srcCompat="@drawable/vector_organization_instagram" />
    <ImageView android:id="@id/iv_linkedin_preferences" android:background="@drawable/shape_bg_social_media" android:padding="@dimen/margin_s" android:layout_width="@dimen/icon_size_m" android:layout_height="@dimen/icon_size_m" android:maxWidth="@dimen/icon_size_m" android:contentDescription="@string/linked_in" android:layout_marginStart="@dimen/margin_m" app:srcCompat="@drawable/vector_organization_linkedin" />
    <ImageView android:id="@id/iv_facebook_preferences" android:background="@drawable/shape_bg_social_media" android:padding="@dimen/margin_s" android:layout_width="@dimen/icon_size_m" android:layout_height="@dimen/icon_size_m" android:maxWidth="@dimen/icon_size_m" android:contentDescription="@string/facebook" android:layout_marginStart="@dimen/margin_m" app:srcCompat="@drawable/vector_organization_facebook" />
</LinearLayout>