<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <RelativeLayout android:paddingLeft="15.0dip" android:paddingTop="15.0dip" android:paddingRight="15.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:paddingHorizontal="15.0dip">
        <LinearLayout android:gravity="center_horizontal" android:orientation="vertical" android:background="@drawable/bg_dialog" android:paddingTop="@dimen/margin_l" android:paddingBottom="@dimen/margin_l" android:layout_width="fill_parent" android:layout_height="wrap_content" android:paddingVertical="@dimen/margin_l">
            <ImageView android:layout_width="30.0dip" android:layout_height="30.0dip" android:contentDescription="@null" app:srcCompat="@drawable/vector_turbo_security_privacy_shield" />
            <TextView android:textSize="@dimen/text_size_l" android:textColor="@color/text_primary" android:id="@id/tv_title_dialog_turbo_positives_detected" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/margin_s" android:text="@string/label_uptodown_protect" />
            <TextView android:textSize="@dimen/text_size_m" android:textColor="@color/text_secundary" android:id="@id/tv_description_dialog_turbo_positives_detected" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/margin_l" android:layout_marginBottom="@dimen/margin_l" android:text="@string/positive_file_found" android:layout_marginVertical="@dimen/margin_l" />
            <TextView android:id="@id/tv_action_dialog_turbo_positives_detected" android:layout_width="wrap_content" android:text="@string/download_anyways" android:paddingStart="@dimen/margin_l" android:paddingEnd="@dimen/margin_l" style="@style/DialogButtonsStyle" />
        </LinearLayout>
    </RelativeLayout>
    <ImageView android:id="@id/iv_close_dialog_turbo_positives_detected" android:layout_width="30.0dip" android:layout_height="30.0dip" android:contentDescription="@string/close" android:layout_alignParentEnd="true" android:elevation="@dimen/button_elevation" app:srcCompat="@drawable/vector_cross_close_popup" />
</RelativeLayout>