<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@drawable/bg_dialog" android:padding="@dimen/margin_l" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <ImageView android:layout_gravity="center_horizontal" android:layout_width="30.0dip" android:layout_height="30.0dip" android:contentDescription="@null" app:srcCompat="@drawable/vector_turbo_security_privacy_shield" />
    <TextView android:textSize="@dimen/text_size_l" android:textColor="@color/text_primary" android:layout_gravity="center_horizontal" android:id="@id/tv_title_dialog_turbo_positives_detected" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/margin_s" android:text="@string/label_uptodown_protect" />
    <TextView android:textSize="@dimen/text_size_l" android:textColor="@color/text_primary" android:id="@id/tv_msg" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/margin_s" />
    <RelativeLayout android:id="@id/rl_result_scan" android:background="@drawable/shape_stroke_accent_red" android:paddingTop="@dimen/margin_m" android:paddingBottom="@dimen/margin_m" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/margin_l" android:paddingVertical="@dimen/margin_m">
        <TextView android:textSize="@dimen/text_size_xl" android:textColor="@color/white" android:gravity="center" android:id="@id/tv_positives_results" android:background="@drawable/shape_bg_accent_red" android:layout_width="@dimen/icon_size_m" android:layout_height="@dimen/icon_size_m" android:text="@string/default_value_0" android:maxLines="1" android:lines="1" android:maxLength="2" android:layout_marginStart="@dimen/margin_m" android:layout_marginEnd="@dimen/margin_m" />
        <TextView android:textSize="@dimen/text_size_m" android:textColor="@color/text_primary" android:id="@id/tv_msg_results" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/virustotal_report_msg" android:maxLines="2" android:layout_toEndOf="@id/tv_positives_results" />
        <TextView android:textSize="@dimen/text_size_xs" android:textColor="@color/text_secundary" android:id="@id/tv_last_scan_results" android:layout_width="fill_parent" android:layout_height="wrap_content" android:maxLines="2" android:layout_alignBottom="@id/tv_positives_results" android:layout_toEndOf="@id/tv_positives_results" />
    </RelativeLayout>
    <LinearLayout android:gravity="center" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/margin_l">
        <TextView android:id="@id/tv_cancel" android:text="@android:string/cancel" style="@style/DialogButtonsStyle" />
        <TextView android:id="@id/tv_install" android:text="@string/option_button_install" android:layout_marginStart="@dimen/margin_l" style="@style/DialogButtonsStyle" />
    </LinearLayout>
</LinearLayout>