<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:background="@color/background_color" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.appcompat.widget.Toolbar android:id="@id/toolbar_vtr" android:layout_width="fill_parent" android:layout_height="?android:actionBarSize">
        <TextView android:id="@id/tv_toolbar_vtr" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/virustotal_safety_report_title" style="@style/UptodownToolbarStyle" />
    </androidx.appcompat.widget.Toolbar>
    <ScrollView android:id="@id/sv_report_vtr" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_below="@id/toolbar_vtr">
        <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <include android:id="@id/header_installed_app" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/margin_m" android:layout_marginTop="@dimen/margin_m" android:layout_marginRight="@dimen/margin_m" android:layout_marginBottom="@dimen/margin_l" android:layout_marginHorizontal="@dimen/margin_m" layout="@layout/header_installed_app" />
            <LinearLayout android:orientation="vertical" android:id="@id/ll_report_vtr" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <RelativeLayout android:id="@id/rl_result_scan" android:background="@drawable/shape_stroke_accent_red" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/margin_m" android:layout_marginRight="@dimen/margin_m" android:layout_marginHorizontal="@dimen/margin_m">
                    <TextView android:textSize="@dimen/text_size_xl" android:textColor="@color/white" android:gravity="center" android:id="@id/tv_positives_results" android:background="@drawable/shape_bg_accent_red" android:layout_width="@dimen/icon_size_m" android:layout_height="@dimen/icon_size_m" android:layout_marginTop="@dimen/margin_m" android:text="@string/default_value_0" android:maxLines="1" android:lines="1" android:maxLength="2" android:layout_marginStart="@dimen/margin_m" android:layout_marginEnd="@dimen/margin_m" />
                    <TextView android:textSize="@dimen/text_size_m" android:textColor="@color/text_primary" android:id="@id/tv_msg_results" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/margin_m" android:text="@string/virustotal_report_msg" android:maxLines="2" android:layout_toEndOf="@id/tv_positives_results" />
                    <TextView android:textSize="@dimen/text_size_xs" android:textColor="@color/text_secundary" android:id="@id/tv_last_scan_results" android:layout_width="fill_parent" android:layout_height="wrap_content" android:maxLines="2" android:layout_alignBottom="@id/tv_positives_results" android:layout_toEndOf="@id/tv_positives_results" />
                    <LinearLayout android:orientation="vertical" android:id="@id/ll_container_scans_vtr" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/margin_m" android:layout_marginTop="@dimen/margin_l" android:layout_marginRight="@dimen/margin_m" android:layout_marginBottom="@dimen/margin_l" android:layout_below="@id/tv_positives_results" android:layout_marginHorizontal="@dimen/margin_m" android:layout_marginVertical="@dimen/margin_l" />
                </RelativeLayout>
                <RelativeLayout android:id="@id/rl_container_result_clean" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/margin_l" android:layout_marginTop="@dimen/margin_l" android:layout_marginRight="@dimen/margin_l" android:layout_marginHorizontal="@dimen/margin_l">
                    <ImageView android:id="@id/iv_logo_uptodown_vtr" android:layout_width="60.0dip" android:layout_height="60.0dip" android:contentDescription="@null" app:srcCompat="@drawable/vector_uptodown_logo" />
                    <ImageView android:id="@id/iv_correct_virus" android:layout_width="18.0dip" android:layout_height="18.0dip" android:layout_marginBottom="3.0dip" android:contentDescription="@null" android:layout_marginStart="20.0dip" android:layout_marginEnd="12.0dip" android:layout_toEndOf="@id/iv_logo_uptodown_vtr" app:srcCompat="@drawable/vector_correct" />
                    <TextView android:textSize="@dimen/text_size_m" android:textColor="@color/text_primary" android:ellipsize="end" android:id="@id/tv_no_virus" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/vt_report_no_virus" android:lines="1" android:layout_alignBottom="@id/iv_correct_virus" android:layout_toEndOf="@id/iv_correct_virus" />
                    <ImageView android:id="@id/iv_correct_spyware" android:layout_width="18.0dip" android:layout_height="18.0dip" android:layout_marginBottom="3.0dip" android:layout_below="@id/iv_correct_virus" android:contentDescription="@null" android:layout_marginStart="20.0dip" android:layout_marginEnd="12.0dip" android:layout_toEndOf="@id/iv_logo_uptodown_vtr" app:srcCompat="@drawable/vector_correct" />
                    <TextView android:textSize="@dimen/text_size_m" android:textColor="@color/text_primary" android:ellipsize="end" android:id="@id/tv_no_spyware" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/vt_report_no_spyware" android:lines="1" android:layout_alignBottom="@id/iv_correct_spyware" android:layout_toEndOf="@id/iv_correct_spyware" />
                    <ImageView android:id="@id/iv_correct_malware" android:layout_width="18.0dip" android:layout_height="18.0dip" android:layout_below="@id/iv_correct_spyware" android:contentDescription="@null" android:layout_marginStart="20.0dip" android:layout_marginEnd="12.0dip" android:layout_toEndOf="@id/iv_logo_uptodown_vtr" app:srcCompat="@drawable/vector_correct" />
                    <TextView android:textSize="@dimen/text_size_m" android:textColor="@color/text_primary" android:ellipsize="end" android:id="@id/tv_no_malware" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/vt_report_no_malware" android:lines="1" android:layout_alignBottom="@id/iv_correct_malware" android:layout_toEndOf="@id/iv_correct_malware" />
                    <TextView android:textSize="10.0dip" android:textColor="@color/main_light_grey" android:id="@id/vt_report_certified_by_uptodown" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:text="@string/vt_report_certified_by_uptodown_com" android:layout_below="@id/iv_correct_malware" android:layout_marginStart="20.0dip" android:layout_toEndOf="@id/iv_logo_uptodown_vtr" />
                </RelativeLayout>
                <TextView android:textSize="@dimen/text_size_m" android:textColor="@color/text_primary" android:ellipsize="end" android:gravity="center" android:id="@id/tv_label_full_report_vtr" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/margin_l" android:text="@string/vt_report_see_full_report" android:maxLines="1" />
                <TextView android:textSize="@dimen/text_size_l" android:textColor="@color/white" android:gravity="center" android:layout_gravity="center_horizontal" android:id="@id/tv_full_report_vtr" android:background="@drawable/ripple_blue_primary_button" android:paddingTop="@dimen/margin_m" android:paddingBottom="@dimen/margin_m" android:layout_width="240.0dip" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/text_size_xl" android:layout_marginTop="@dimen/margin_m" android:layout_marginRight="@dimen/text_size_xl" android:layout_marginBottom="@dimen/margin_xl" android:text="@string/vt_report_virustotal" android:textAllCaps="true" android:layout_marginHorizontal="@dimen/text_size_xl" android:paddingVertical="@dimen/margin_m" />
            </LinearLayout>
            <TextView android:textSize="@dimen/text_size_m" android:textColor="@color/text_primary" android:ellipsize="end" android:id="@id/tv_not_avaialable_vtr" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/margin_m" android:layout_marginRight="@dimen/margin_m" android:layout_marginBottom="@dimen/margin_l" android:layout_marginHorizontal="@dimen/margin_m" />
            <RelativeLayout android:id="@id/rl_sha256_more_info" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="@dimen/margin_m" android:animateLayoutChanges="true">
                <ImageView android:id="@id/iv_sha256_vtr" android:layout_width="@dimen/icon_size_m" android:layout_height="@dimen/icon_size_m" android:contentDescription="@null" android:layout_marginEnd="@dimen/margin_m" app:srcCompat="@drawable/vector_more_info_sha256" />
                <TextView android:textSize="@dimen/text_size_m" android:textColor="@color/text_primary" android:ellipsize="end" android:gravity="bottom" android:id="@id/tv_sha256_label_vtr" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/more_info_label_sha256" android:maxLines="1" android:lines="1" android:layout_toEndOf="@id/iv_sha256_vtr" />
                <TextView android:textSize="@dimen/text_size_m" android:textColor="@color/text_primary" android:ellipsize="end" android:id="@id/tv_sha256_value_vtr" android:paddingBottom="@dimen/margin_m" android:layout_width="fill_parent" android:layout_height="wrap_content" android:maxLines="2" android:layout_below="@id/tv_sha256_label_vtr" android:layout_toEndOf="@id/iv_sha256_vtr" />
            </RelativeLayout>
            <RelativeLayout android:id="@id/rl_signature_more_info" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="@dimen/margin_m" android:animateLayoutChanges="true">
                <ImageView android:id="@id/iv_signature_vtr" android:layout_width="@dimen/icon_size_m" android:layout_height="@dimen/icon_size_m" android:contentDescription="@null" android:layout_marginEnd="@dimen/margin_m" app:srcCompat="@drawable/vector_more_info_signature" />
                <TextView android:textSize="@dimen/text_size_m" android:textColor="@color/text_primary" android:ellipsize="end" android:gravity="bottom" android:id="@id/tv_signature_label_vtr" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/signature_label_virustotal_report" android:maxLines="1" android:lines="1" android:layout_toEndOf="@id/iv_signature_vtr" />
                <TextView android:textSize="@dimen/text_size_m" android:textColor="@color/text_primary" android:ellipsize="end" android:id="@id/tv_signature_value_vtr" android:paddingBottom="@dimen/margin_m" android:layout_width="fill_parent" android:layout_height="wrap_content" android:maxLines="2" android:layout_below="@id/tv_signature_label_vtr" android:layout_toEndOf="@id/iv_signature_vtr" />
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>
    <TextView android:textSize="@dimen/text_size_xl" android:textColor="@color/text_primary" android:gravity="center" android:id="@id/tv_no_data_vtr" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="10.0dip" android:text="@string/virustotal_report_no_report_available" android:layout_centerInParent="true" />
    <include android:id="@id/loading_view_virus_total_report" layout="@layout/core_loading_view" />
</RelativeLayout>